<resources>
    <string name="app_name">bulingo</string>
    <string name="title_activity_login">SIGN IN</string>
    <string name="sign_in">SIGN IN</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">SIGN UP</string>
    <string name="action_sign_in_short">SIGN IN</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up_capitalized">SIGN UP</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="password_confirm">Password Confirm</string>
    <string name="logo">Logo</string>
    <string name="sign_up">Sign Up</string>

    <string name="sign_up_error">Sign Up Error</string>
    <string name="already_signed_up">You already have an account</string>
    <string name="already_have_an_account"><u>Already have an account? Sign In</u></string>
    <string name="earth">EarthImage</string>
    <string name="chooseLanguage">Select a language to learn</string>
    <string name="englishText">ENGLISH</string>
    <string name="turkishText">TÜRKÇE</string>
    <string name="germanText">DEUTSCH</string>
    <string name="frenchText">FRANÇAIS</string>
    <string name="exercises">EXERCISES</string>
    <string name="lang_select">LANGUAGE SELECTION</string>
    <string name="log_out">Log out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">PROFILE</string>
    <string name="rating">Rating :</string>
    <string name="username2"> Username :</string>
    <string name="returnMain">Go Back</string>
    <string name="title_activity_chat_">Chat_Activity</string>
    <string name="levelExplain"><i><u>What do these levels mean?</u></i></string>
    <string name="newRating">Rating</string>

</resources>
