<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.LogInMain"
    android:background="@drawable/earth2">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_medium_italic"
        android:text="@string/welcome"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/exerciseButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/exerciseButton"
        style="@style/language_button"
        android:textColor="@color/colorAccent"
        android:layout_height="70dp"
        android:onClick="onClickExercise"
        android:text="@string/exercises"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/languageSelectButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:cornerRadius="4dp"
        app:backgroundTint="@android:color/transparent"
        app:rippleColor="@color/colorAccent"
        app:strokeColor="@color/colorAccent"
        app:strokeWidth="5dp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/languageSelectButton"
        style="@style/language_button"
        android:textColor="@color/colorAccent"
        android:layout_height="70dp"
        android:onClick="onClickLanguageSelect"
        android:text="@string/lang_select"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/logOutButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerciseButton"
        app:cornerRadius="4dp"
        app:backgroundTint="@android:color/transparent"
        app:rippleColor="@color/colorAccent"
        app:strokeColor="@color/colorAccent"
        app:strokeWidth="5dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logOutButton"
        style="@style/language_button"
        android:textColor="@color/colorAccent"
        android:layout_height="70dp"
        android:onClick="onClickLogOutBtn"
        android:text="@string/log_out"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/languageSelectButton"
        app:cornerRadius="4dp"
        app:backgroundTint="@android:color/transparent"
        app:rippleColor="@color/colorAccent"
        app:strokeColor="@color/colorAccent"
        app:strokeWidth="5dp" />

</androidx.constraintlayout.widget.ConstraintLayout>